<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.barayuda.hitungluas.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/lbPanjang"
        android:id="@+id/lbPanjang"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="Panjang" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/lbLebar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/txtLebar"
        android:hint="@string/tvLebar"
        android:layout_alignParentEnd="true"
        android:inputType="number|numberSigned|numberDecimal"
        android:allowUndo="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLebar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/btnHitung"
        tools:text="@string/bHitung"
        android:text="HITUNG" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHitung"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:id="@+id/txtLuas"
        tools:text="@string/tvLuas" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbLebar"
        tools:text="@string/lbLebar"
        android:layout_below="@+id/txtPanjang"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:text="Lebar" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtPanjang"
        android:inputType="number|numberSigned|numberDecimal"
        android:hint="@string/tvPanjang"
        android:layout_below="@+id/lbPanjang"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true"
        android:allowUndo="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnHitung"
        android:id="@+id/btnHapus"
        android:layout_alignBottom="@+id/btnHitung"
        android:layout_alignParentEnd="true"
        tools:text="@string/bHapus"
        android:text="HAPUS" />


</RelativeLayout>
